--- a/settings.html
+++ b/settings.html
@@ -69,13 +69,13 @@
             <li class="nav__btn">
                 <a class ="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
-                 <a class ="nav__link" href="Chats.html">
+                 <a class ="nav__link" href="chats.html">
                      <span class="nav__notification badge">1</span>
                      <i class="fas fa-comment fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class ="nav__link" href="Find.html"><i class="fas fa-search fa-2x"></i></a></li>
+                <a class ="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class ="nav__link" href="More.html"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+                <a class ="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
             </li> 
         </ul>
     </nav>
