--- a/index.html
+++ b/index.html
@@ -30,15 +30,11 @@
     </haeder>
 
     <form action="friends.html" method="get" id="login-form">
-        <input name="username" type="text" placeholder="Email or phone number" />
-        <input name="password" type="text" placeholder="Password" />
+        <input required name="username" type="text" placeholder="Email or phone number" />
+        <input required name="password" type="text" placeholder="Password" />
         <input type="submit" value="Log in" />
         <a href="#"> Find Account or Password </a>
     </form>
-
-    <div id="no-mobile">
-        <span>Your screen is too big</span>
-    </div>
 
     <script src="https://kit.fontawesome.com/b1da8bed6b.js" crossorigin="anonymous"></script>
 </body>
