--- a/find.html
+++ b/find.html
@@ -160,6 +160,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/b1da8bed6b.js" crossorigin="anonymous"></script>
 </body>
 </html>
