--- a/friends.html
+++ b/friends.html
@@ -94,6 +94,10 @@
         <i class="fas fa-comment"></i> 
     </div>
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/b1da8bed6b.js" crossorigin="anonymous"></script>
 </body>
 </html>
