--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <a href="#"> Find Account or Password </a>
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/b1da8bed6b.js" crossorigin="anonymous"></script>
 </body>
 </html>
